# pentrex

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ACIKLAMA_TR.md
examples/: chat.py
pentrex/: __init__.py  __main__.py  cli.py  config.py  loop.py
pentrex/agents/: __init__.py  crew.py
pentrex/config/: __init__.py
pentrex/interface/: __init__.py  cli.py
pentrex/knowledge/: __init__.py  prompt.py  prompts.py
pentrex/llm/: __init__.py
pentrex/mcp/: __init__.py
pentrex/playbooks/: __init__.py
pentrex/runtime/: __init__.py  report.py
pentrex/tools/: __init__.py  explain.py  nmap_tool.py  notes.py  quiz.py  registry.py  scenario.py  terminal.py  toolguide.py
scripts/: setup.sh
tests/: test_tools.py
